<resources>
    <string name="app_name">gofer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuración</string>
    <string name="facebook_app_id" translatable="false">429414447811759</string>

    <string name="facebook_client_token">2669db3500af5afc4760e5340458bd96</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb429414447811759</string>
    <string name="FACEBOOK_CONTENT_PROVIDER_APP_ID">com.facebook.app.FacebookContentProvider429414447811759</string>


    <string name="google_crash_reporting_apifalse">gofer-254606</string>
    <string name="google_maps_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDEBl_QYtDWOFNbbpFjPNQRKTIt8zy689k</string>

    <string name="google_web_client_token" translatable="false">69477776659-sml00ebu3er93dvjosio0oatsl143g7j.apps.googleusercontent.com</string>

    <string name="google_places_api_key" translatable="false">AIzaSyDEDFiC70YKqtp6GFuYe8wOm4HZGDZyzxk</string>
    <string name="google_directions_api_key" translatable="false">AIzaSyAfbWpxmBQnjG-Uyme8IJr-sb0iMdwKEpY</string>


    <string name="hint_email">Email</string>
    <string name="text_sign_in">Entrar</string>
    <string name="password">Password</string>
    <string name="facebook_log_in_button">Continue con Facebook</string>
    <string name="continue_with_google">Registrarse con Google</string>
    <string name="textview_forgot_password">¿Olvidé mi contraseña?</string>
    <string name="products">Productos</string>
    <string name="drawer_nav_profile">Perfil</string>
    <string name="login_unsuccessful_msg">Fallo en autenticación</string>
    <string name="registro_de_usuario">Registro de usuario</string>
    <string name="please_wait_while_adapter_changes">Por favor espere actualización de productos</string>
    <string name="drawer_nav_settings">Configuración</string>
    <string name="drawer_my_products">Mis Productos</string>
    <string name="drawer_close">Cerrar sesión</string>
    <string name="preference_file_key">com.couplace.gofer.PREFERENCE_FILE_KEY</string>
    <string name="preference_login_facebook">com.couplace.gofer.PREFERENCE_LOGIN_FACEBOOK</string>
    <string name="preference_login_google">com.couplace.gofer.PREFERENCE_LOGIN_GOOGLE</string>
    <string name="location_unknown">Localización desconocida</string>
    <string name="location_updates_label">Localización actualizada</string>
    <string name="start_location_updates_button_text">Comience a recibir su ubicación actualizada.</string>
    <string name="stop_location_updates_button_text">Dejar de recibir su ubicación actualizada.</string>

    <string name="location_updated">Localización actualizada: %1$s</string>
    <string name="no_location_text">No podemos recibir su ubicación.</string>
    <string name="permission_rationale">La aplicación requiere permiso para acceder a su ubicación.</string>
    <string name="permission_denied_explanation">Permiso denegado para recibir su ubicación.</string>
    <string name="settings">Configuración</string>
    <string name="ok">OK</string>
    <string name="buy_product_dialog">Compra del producto</string>
    <string name="confirm">Confirmar</string>
    <string name="text_dialog">Desea comprar el producto?</string>
    <string name="buy_product">Comprar</string>
    <string name="lorem_ipsum">Lorem ipsum dolor</string>
    <string name="continue_con_facebook">Continue con Facebook</string>

</resources>