<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/drawer_nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/drawer_nav_profile"/>

        <item android:id="@+id/drawer_my_products"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/drawer_my_products"/>

        <item android:id="@+id/drawer_nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_nav_settings"/>

        <item android:id="@+id/drawer_close"
            android:icon="@drawable/ic_close"
            android:title="@string/drawer_close"/>
    </group>
</menu>